force-app/main/default/objects/Credit_Report__c/Credit_Report__c.object-meta.xml
<CustomObject>
    <description>Stores credit report information for loan applications</description>
    <label>Credit Report</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Credit Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>