force-app/main/default/objects/Credit_Report__c/fields/Bureau_Name__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Name__c</fullName>
    <description>Credit bureau that provided the report</description>
    <inlineHelpText>Select the credit bureau that provided this report</inlineHelpText>
    <label>Bureau Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equifax</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>TransUnion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>