force-app/main/default/objects/Credit_Report__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <description>Credit score from the credit report</description>
    <inlineHelpText>Enter the credit score (typically 300-850)</inlineHelpText>
    <label>Credit Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>