force-app/main/default/objects/Credit_Report__c/fields/Inquiry_Count__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Count__c</fullName>
    <description>Number of credit inquiries in the report</description>
    <inlineHelpText>Enter the number of credit inquiries shown on the report</inlineHelpText>
    <label>Inquiry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>