force-app/main/default/objects/Credit_Report__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>Date when the credit report was generated</description>
    <inlineHelpText>Enter the date when this credit report was generated</inlineHelpText>
    <label>Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>