force-app/main/default/objects/Credit_Report__c/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <description>Total debt amount shown on the credit report</description>
    <inlineHelpText>Enter the total debt amount from the credit report</inlineHelpText>
    <label>Total Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>