force-app/main/default/objects/Credit_Report__c/fields/Trade_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Trade_Line_Count__c</fullName>
    <description>Number of trade lines (credit accounts) in the report</description>
    <inlineHelpText>Enter the number of trade lines shown on the credit report</inlineHelpText>
    <label>Trade Line Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>