force-app/main/default/objects/Credit_Report__c/validationRules/Non_Negative_Debt.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Debt</fullName>
    <active>true</active>
    <description>Ensures total debt is not negative</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Total_Debt__c)),
    Total_Debt__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Total_Debt__c</errorDisplayField>
    <errorMessage>Total debt cannot be negative</errorMessage>
</ValidationRule>