force-app/main/default/objects/Credit_Report__c/validationRules/Valid_Credit_Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Credit_Score_Range</fullName>
    <active>true</active>
    <description>Ensures credit score is between 300 and 850</description>
    <errorConditionFormula>OR(
    Credit_Score__c &lt; 300,
    Credit_Score__c &gt; 850
)</errorConditionFormula>
    <errorDisplayField>Credit_Score__c</errorDisplayField>
    <errorMessage>Credit score must be between 300 and 850</errorMessage>
</ValidationRule>