force-app/main/default/objects/Credit_Report__c/validationRules/Valid_Report_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Report_Date</fullName>
    <active>true</active>
    <description>Ensures report date is not in future and not older than 90 days</description>
    <errorConditionFormula>OR(
    Report_Date__c &gt; TODAY(),
    Report_Date__c &lt; TODAY() - 90
)</errorConditionFormula>
    <errorDisplayField>Report_Date__c</errorDisplayField>
    <errorMessage>Credit report date cannot be in the future or older than 90 days</errorMessage>
</ValidationRule>